--- a/views/root/root.index.jade
+++ b/views/root/root.index.jade
@@ -1,1 +1,5 @@
-h3 Welcome to Node Rocket !
+table#paste-table
+  tr.header
+    td Paste Name
+    td 
+      a(href='/pastes/new') + Add New Paste
